crates/data-dict/tests/snapshots/validate_spec__bad_cardinality.snap
---
source: crates/data-dict/tests/validate_spec.rs
---
$version: "0.1.0"
$learn_more: http://data-dict.tidyverse.org/
relationships:
  - cardinality: many-to-many
    join: a.x = b.y
────────────────────────────────────────
Error: [Q-1-12] YAML Validation Failed
   ╭─[ dict.yaml:4:18 ]
   │
 4 │   - cardinality: many-to-many
   │                  ──────┬─────  
   │                        ╰─────── Value must be one of: "one-to-one", "one-to-many", "many-to-one", got '"many-to-many"'
───╯
✖ At document path: `relationships.[0].cardinality`
ℹ Schema constraint: object > array > object > enum
ℹ Check the schema for allowed values?
